--- a/.gitignore
+++ b/.gitignore
@@ -68,9 +68,11 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
-.env.test
+# dotenv environment variables file -- NO SENSITIVE INFO IN OUR .ENVs
+#.env.local
+#.env.development.local
+#.env.test.local
+#.env.production.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
