--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -83,6 +83,11 @@
 #           by Docker
 #           https://docs.docker.com/storage/volumes/
 #
+#       12. How To Solve Module Not Found Can’t Resolve ‘fs’ in Next.js
+#           by Maikel Venn
+#           https://maikelveen.com/blog/how-to-solve-module-not-found-cant-resolve-fs-in-nextjs
+#
+#
 #
 #
 #       NOTES:
