--- a/.env
+++ b/.env
@@ -100,7 +100,7 @@
 APP_NAME=badbank
 #
 # APP_VERSION - the version # of the App used throughout the build and the JS code.
-APP_VERSION=0.0.6
+APP_VERSION=0.5.0
 #
 # APP_TITLE - the description of the App used throughout the build and the JS code.
 APP_TITLE="Bad Bank: A 3-Tier MERN App"
@@ -119,6 +119,9 @@ APP_BACKEND_PORT=8080
 #
 # APP_DATABASE_PORT - the Port # used for the Database/Admin/Listener
 APP_DATABASE_PORT=27017
+#
+# APP_DATABASE_NAME - the name used for the MongoDB Database
+APP_DATABASE_NAME=${APP_NAME}-mongodb
 #
 #
 # COMPOSE_PROJECT_NAME - otherwise “docker compose up” command takes the directory name as the app name,
