Working on functionality

--- a/.env.production
+++ b/.env.production
@@ -113,6 +113,9 @@ APP_BACKEND_URL=https://${APP_SUBDOMAIN}/backend
 # REACT_APP_ENV - for React to see our mode
 REACT_APP_ENV=production
 #
+# REACT_APP_ENV - for React to see our build version
+REACT_APP_VERSION=${APP_VERSION}
+#
 # REACT_APP_SUBDOMAIN - the same name made accessible in the React App Front-end
 REACT_APP_SUBDOMAIN=${APP_SUBDOMAIN}
 #
