--- a/.env.development
+++ b/.env.development
@@ -113,6 +113,9 @@ APP_BACKEND_URL=http://${APP_SUBDOMAIN}:8080
 # REACT_APP_ENV - for React to see our mode
 REACT_APP_ENV=development
 #
+# REACT_APP_ENV - for React to see our build version
+REACT_APP_VERSION=${APP_VERSION}
+#
 # REACT_APP_SUBDOMAIN - the same name made accessible in the React App Front-end
 REACT_APP_SUBDOMAIN=${APP_SUBDOMAIN}
 #
