--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -43,7 +43,7 @@
 FROM node:14-slim
 #
 # signature
-LABEL ${APP_NAME:-badbank}.frontend.constructor=${APP_CONSTRUCTOR:-tmcguire@mcode.com}
+LABEL ${APP_NAME:-badbank}.backend.constructor=${APP_CONSTRUCTOR:-tmcguire@mcode.com}
 #
 # default all required ENVIRONMENT VARIABLES to '.env.production' values
 # these of overridden by the 'Docker-Compose.yaml' during development
