--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "bootstrap": "^4.6.0",
     "dotenv": "^16.0.3",
     "react": "^17.0.1",
+    "react-apple-signin-auth": "^1.0.9",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "scriptjs": "^2.5.9",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
