Trying different Port Mapping for Production

--- a/.env.development
+++ b/.env.development
@@ -104,7 +104,7 @@ APP_SUBDOMAIN=localhost # ${APP_NAME}.${APP_DOMAIN} or localhost for development
 #
 # APP_BACKEND_URL - taken from the standard .env file into a REACT_APP_* var for the Front-End
 # should be equal to ${APP_BACKEND_URL}
-APP_BACKEND_URL=${APP_SUBDOMAIN}:8080
+APP_BACKEND_URL=http://${APP_SUBDOMAIN}:${APP_BACKEND_PORT}
 #
 #
 #
