--- a/.env.production.droplet
+++ b/.env.production.droplet
@@ -241,7 +241,7 @@ APP_SUBDOMAIN=${APP_NAME}.tjmcode.io # ${APP_NAME}.${APP_DOMAIN} or localhost fo
 #
 # APP_BACKEND_URL - taken from the standard .env file into a REACT_APP_* var for the Front-End
 # should be equal to ${APP_BACKEND_URL}
-APP_BACKEND_URL=${APP_SUBDOMAIN}/backend
+APP_BACKEND_URL=http://${APP_SUBDOMAIN}:${APP_BACKEND_PORT}
 #
 #
 #
