--- a/docker-compose.droplet.yaml
+++ b/docker-compose.droplet.yaml
@@ -190,7 +190,7 @@ services:
     ports:
       - '${APP_BACKEND_PORT:-8080}:8080'
     volumes:
-      - backend-volume:/exe/frontend  # temporary volume
+      - backend-volume:/exe/backend  # temporary volume
     restart: always
     networks:
       - react-express  # frontend to backend connection
