--- a/.env.production.droplet
+++ b/.env.production.droplet
@@ -107,7 +107,7 @@
 APP_NAME=badbank
 #
 # APP_VERSION - the version # of the App used throughout the build and the JS code.
-APP_VERSION=0.7.0
+APP_VERSION=0.8.0
 #
 # APP_TITLE - the description of the App used throughout the build and the JS code.
 APP_TITLE="Bad Bank: A 3-Tier MERN App"
@@ -119,13 +119,13 @@ APP_DESCRIPTION="Bad Bank as a 3-Tier FrontEnd-BackEnd-Database App."
 APP_CONSTRUCTOR="tjmcode <tmcguire@mcode.com>"
 #
 # APP_FRONTEND_PORT - the Port # used for the Frontend/Client/Browser
-APP_FRONTEND_PORT=3001
+APP_FRONTEND_PORT=3000
 #
 # APP_BACKEND_PORT - the Port # used for the Backend/Server/Router
-APP_BACKEND_PORT=8081
+APP_BACKEND_PORT=8080
 #
 # APP_DATABASE_PORT - the Port # used for the Database/Admin/Listener
-APP_DATABASE_PORT=27021
+APP_DATABASE_PORT=27020
 #
 # APP_DATABASE_NAME - the name used for the MongoDB Database
 APP_DATABASE_NAME=${APP_NAME}-mongodb
@@ -226,7 +226,7 @@ COMPOSE_PROJECT_NAME=${APP_NAME}
 #                                     Define all the APP_* environment variables here in your .env file.
 #                                     Be sure to 'npm install dotenv' to enable JS code reading .env values.
 #  05-Oct-2022   TJM-MCODE  {0002}    Split into .env (common), .env.development (NODE_ENV=development), and .env.production (NODE_ENV=production)
-#  06-Oct-2022   TJM-MCODE  {0003}    Added '*BACKEND_URL' to support '/backend' vs. ':8080' as the connection URL.
+#  06-Oct-2022   TJM-MCODE  {0003}    Added '*BACKEND_URL' to support '/backend' vs. ':808x' as the connection URL.
 #
 #
 #
