--- a/.env.production
+++ b/.env.production
@@ -89,7 +89,7 @@
 #                                     Define all the APP_* environment variables here in your .env file.
 #                                     Be sure to 'npm install dotenv' to enable JS code reading .env values.
 #  05-Oct-2022   TJM-MCODE  {0002}    Split into .env (common), .env.development (NODE_ENV=development), and .env.production (NODE_ENV=production)
-#  06-Oct-2022   TJM-MCODE  {0003}    Added '*BACKEND_URL' to support '/backend' vs. ':8080' as the connection URL.
+#  06-Oct-2022   TJM-MCODE  {0003}    Added '*BACKEND_URL' to support '/backend' vs. ':808x' as the connection URL.
 #
 #
 #
